# repowiki

./: .env  .gitignore  FINAL_SUMMARY.md  INSTALL.md  README.md  pyproject.toml
docs/: COMPLETE_PROMPT_FLOW.md  CONVERSION_SUMMARY.md  FINAL_SUMMARY.md  GITHUB_COPILOT_BUSINESS_OPTIMAL_SETTINGS.md  KNOWLEDGE_GRAPH_FLOW.md  KNOWLEDGE_GRAPH_SEARCH_PROMPTS.md  PIPMASTER_WARNING.md
lightrag/: README.md  SKILL.md  _meta.json
lightrag-apps/: README.md  SKILL.md
lightrag-apps/references/: configuration.md  query-modes.md
lightrag-apps/scripts/: repowiki.py
lightrag/references/: configuration.md
repowiki_storage/main/: graph_chunk_entity_relation.graphml
scripts/: 00_run_all.py  01_index_repository.py  02_hierarchical_wiki_generator.py  README.md  legacy_wrapper.sh  test_setup.py
src/repowiki/: __init__.py  cli.py  config.py  generator.py  indexer.py  prompts.py
tests/: __init__.py  test_config.py  test_generator_integration.py  test_indexer.py
wiki_docs/: README.md
wiki_docs/01-overview/: README.md  architecture.md  design-decisions.md  project-overview.md
wiki_docs/02-getting-started/: README.md  configuration.md  installation.md
wiki_docs/03-core-concepts/: README.md  common-workflows.md  key-components.md  project-structure.md
wiki_docs/04-api-reference/: README.md  code-examples.md  public-api.md
wiki_docs/05-development/: README.md  dependencies.md  extension-points.md  testing.md
